--- a/ishare_app/android/app/build.gradle
+++ b/ishare_app/android/app/build.gradle
@@ -10,7 +10,10 @@ plugins {
 
 android {
     namespace = "com.example.ishare_app"
-    compileSdk = flutter.compileSdkVersion
+    
+    // ✅ KEEP: Must be 35 for the lifecycle plugin
+    compileSdk = 35
+    
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -27,8 +30,13 @@ android {
         applicationId = "com.example.ishare_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        
+        // ✅ CHANGED: Manually set to 23 (required by Firebase)
+        minSdk = 23
+        
+        // ✅ KEEP: Manually set to 35
+        targetSdk = 35
+        
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
