--- a/ishare_app/pubspec.yaml
+++ b/ishare_app/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   # 🌍 Localization
   flutter_localizations: 
     sdk: flutter
-  intl: ^0.19.0 
+  intl: 0.20.2 
 
   # 🗺️ MAPS (Switched to OpenStreetMap - Free!)
   flutter_map: ^7.0.2
@@ -31,7 +31,7 @@ dependencies:
   http: ^1.1.0
   path: ^1.8.3
   flutter_image_compress: ^2.1.0
-  file_picker: ^6.0.0
+  file_picker: ^10.0.0
   provider: ^6.0.5
   qr_flutter: ^4.1.0
   flutter_rating_bar: ^4.0.1
